--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,127 +1,11 @@
-@charset "utf-8";
-/* CSS Document */
-
-html, body
+/*Couleur de la barre de NAV*/
+/*Fond de la barre*/
+.navbar
 {
-	width: 99.6%;
-	height: 100%;
-	background-color: gray;
+	background-color: black;
 }
 
-/*ref pour case bootstrap*/
-
-div.col-titre 
+.nav-item
 {
-	text-align: center;
-	width:50%;
-	margin:0 auto;
-	background-color: antiquewhite; 
-}
-
-.col-article 
-{
-	width:70%;
-	margin:0 auto;
-	background-color: green;
-	height: 400px;
-	display:block;
-}
-
-div.col-4
-{
-	width:31.33%; margin:5px;
-}
-
-/*Barre Navigation*/
-nav.header
-{
-	width: 100%;
-	height: 80px;
-	text-align: right;
-}
-
-ul 
-{
-  width:100%;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-li 
-{
-	display: inline-block;
-}
-
-li a 
-{
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/*Change le couleur lors du passage*/
-li a:hover 
-{
-  background-color: #FF777A;
-}
-
-/*Change le couleur de la page active*/
-.active 
-{
-  background-color: #FF8000;
-}
-
-/*Article*/
-.Image
-{
-	width: 22%;
-	float:left;
-	margin:15px;
-}
-
-.TitrePreface
-{
-	font-size: 30px;
-	float:right;
-	width: 65%;
-	font-weight: bold;
-}
-
-.Preface
-{
-	width: 65%;
-	float:right;
-	font-size: 20px;
-}
-
-/*texte en dessous des photos*/
-/*Taille max recommandee 109 caractères*/
-.Description
-{
-	float:left;
-	font-size: 15px;
-	color:black;
-	padding-left: 15px; 
-	width:20%;
-}
-
-/*boutons article en savoir plus*/
-a.BoutonPreface 
-{
-	padding: 10px 30px; 
-	background: black; 
-	color: white; 
-	float:right;
-	margin-right: 30px;
-}
-
-a.BoutonPreface:hover 
-{
-	background: white; 
-	color: black;
+	color: brown; /*Couleur Text*/
 }
