--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,29 @@
+:root
+{
+	
+}
 /*Couleur de la barre de NAV*/
 /*Fond de la barre*/
-.navbar
+.nav
 {
 	background-color: black;
 }
 
-.nav-item
+.nav-link
 {
-	color: brown; /*Couleur Text*/
+	color: white; /*Couleur Text*/
 }
+.navbar-brand
+{
+	color: crimson;
+}
+
+/*Image adaptative en fonction de la résolution*/
+.img-responsive
+{
+	width: 100%;
+	height: 500px;
+	display: block;
+	background-size: cover;
+}
+
