--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,11 +19,8 @@
 }
 
 /*Image adaptative en fonction de la résolution*/
-.img-responsive
+.carousel-inner
 {
 	width: 100%;
 	height: 500px;
-	display: block;
-	background-size: cover;
 }
-
